# wlgen

./: .gitignore  .travis.yml  CLAUDE.md  OPTIMIZATION_ANALYSIS.md  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  publish.yml
src/wlgen/: __init__.py
src/wlgen/tests/: __init__.py
src/wlgen/tests/files/: tmp
wgen/tests/: __init__.py
wgen/tests/files/: sample_3digits.lst
wlgen/: __init__.py  core.py
wlgen/benchmarks/: README.md  __init__.py  baseline_results_pre_opt.txt  benchmark.py  latest_results.txt
wlgen/tests/: __init__.py
wlgen/tests/files/: sample_mixed_unix  sample_mixed_unix.lst
