[project]
name="wlgen"
version="1.3"
description="A recursive wordlist generator written in python"
readme = "README.md"
authors = [
    { name = "tehw0lf", email = "tehwolf@protonmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "ruff>=0.8.4",
]

[project.scripts]
wlgen = "wlgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
