[project]
name="wlgen"
version="2.0.1"
description="A recursive wordlist generator written in python"
readme = "README.md"
authors = [
    { name = "tehw0lf", email = "tehwolf@protonmail.com" }
]
requires-python = ">=3.0"
[dependency-groups]
lint = [
  "ruff"
]
[project.scripts]
wlgen = "wlgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
